@@ -40,6 +40,7 @@ module.exports = function( caminio ){
     this.update();
     this.show();
     this.destroy();
+    this.restore();
 
   }
 
@@ -367,6 +368,37 @@ module.exports = function( caminio ){
 
   };
 
+  /**
+   * 
+   * creates a RESTORE method for the controller
+   * existing routes will remain untouched
+   *
+   * @method restore [POST]
+   * @private
+   */
+  CrudModel.prototype.restore = function createRestore(){
+
+    var self = this;
+
+    if( !('restore' in this.controller) )
+      this.controller['restore'] = function( req, res ){
+
+        caminio.models[self.model.modelName].restore( req.param('id'), function( err, model ){
+          if( err ){ return res.json( 500, { error: 'server_error', details: err }); }
+          req[self.underscoredName] = model;
+          var result = getModelWithNamespace( req.header('namespaced'), 
+                                              self.model.modelName, 
+                                              JSON.parse(JSON.stringify( req[self.underscoredName] )) );
+          if( req.header('sideload') )
+            result = util.transformJSON( result, req.header('namespaced') );
+          return res.json( result );
+        });
+
+      };
+
+    caminio.controller.createRoute( 'post', this.route+'/:id/restore', this.controllerName, 'restore' );
+
+  };
   return CrudModel;
 
   /**
