@@ -15,7 +15,8 @@ module.exports = function( caminio ){
 
   return {
     setupTrash: setupTrash,
-    trash: trash
+    trash: trash,
+    restore: restore
   };
 
 
@@ -23,8 +24,7 @@ module.exports = function( caminio ){
 
     schema.add({ deletedAt: { type: Date, default: Date.now }, deletedBy: { type: mongoose.Schema.Types.ObjectId, ref: 'User' }});
 
-    var TrashModel = mongoose.model( name+'Trash', schema, inflection.tableize(name)+'_trash' );
-
+    mongoose.model( name+'Trash', schema, inflection.tableize(name)+'_trash' );
     schema.pre('remove', trash);
 
   }
@@ -46,7 +46,28 @@ module.exports = function( caminio ){
       }
       next();
     });
-    
+
+  }
+
+  function restore( id, next ){
+
+    var TrashModel = mongoose.models[ this.modelName + 'Trash' ];
+    var Model = mongoose.models[ this.modelName ];
+
+    TrashModel.findOne({ _id: id }).exec( function( err, tmodel ){
+      if( err ){ next( err ); }
+      if( !tmodel )
+        return next( 404 );
+      tmodel.deletedAt = null;
+      tmodel.deletedBy = null;
+      Model.create( tmodel.toObject(), function( err, model ){
+        if( err ){ next( err ); }
+        TrashModel.remove({ _id: id }, function(err){
+          if( err ){ next( err ); }
+          next( null, model );
+        });
+      });
+    });
 
   }
 
