@@ -40,11 +40,14 @@ module.exports = function( caminio ){
         //throw Error('forgot to return schema in model '+name+'?');
       caminio.logger.info('registering model', name);
 
-      if( schema.trash )
+      if( schema.trash ){
         mongoTrash.setupTrash( name, schema );
+        schema.static('restore', mongoTrash.restore);
+      }
 
       var Model = mongoose.model( name, setupDefaults( schema ), inflection.tableize(name) );
       caminio.models[name] = Model;
+
 
     }
 
