@@ -5,6 +5,7 @@
   - siteVersion, caminioVersion as variable in layouts
   - crud update calls mongoose' update on instantiated model (instead of Model class) which
     causes middleware to get executed
+  - restore functionallity in autorest with :id/restore, a model can be restored
 
 1.1.1
   - Fix Issues #1: singular/plural policies definition mixed up by loader
